Topics: Add bottom padding to ``header-text`` to fix scrollbar overlap

--- a/app/static/css/forums.css
+++ b/app/static/css/forums.css
@@ -6,7 +6,7 @@
 }
 
 .header-text {
-    padding-top: 10px;
+    padding: 10px 0px 6px 0px;
     font-size: 150%;
     font-weight: 100;
     margin-left: 10px;
